fix: wrap in mq

--- a/src/components/nav-sidebar/nav-sidebar.scss
+++ b/src/components/nav-sidebar/nav-sidebar.scss
@@ -99,8 +99,8 @@
 
   // Fix bug introuced by Bootstrap Italia v2.15.0
   // Remove when fixed in Bootstrap Italia
-  .navbar .navbar-collapsable {
-    width: 100%;
+  @include media-breakpoint-up(lg) {
+    width: calc(100% - 48px); // use available horizontal space minus 48px on the right for the close button and backdrop
   }
 }
 
